--- a/style.css
+++ b/style.css
@@ -120,6 +120,171 @@ p:last-child {
   background-color: #1b2432;
 }
 
+.animation.stage {
+  position: relative;
+  width: 25%;
+  -webkit-box-flex: 4;
+  -webkit-flex: 4;
+  -ms-flex: 4;
+  flex: 4;
+}
+.animation.stage .heart.icon {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("images/heart.svg");
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 27px;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+}
+@-webkit-keyframes heart0 {
+  from {
+    -webkit-transform: translate3d(0%, 0, 0);
+    transform: translate3d(0%, 0, 0);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: translate3d(0%, -100%, 0);
+    transform: translate3d(0%, -100%, 0);
+    opacity: 0;
+  }
+}
+@keyframes heart0 {
+  from {
+    -webkit-transform: translate3d(0%, 0, 0);
+    transform: translate3d(0%, 0, 0);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: translate3d(0%, -100%, 0);
+    transform: translate3d(0%, -100%, 0);
+    opacity: 0;
+  }
+}
+@-webkit-keyframes heart1 {
+  from {
+    -webkit-transform: translate3d(20%, 0, 0);
+    transform: translate3d(20%, 0, 0);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: translate3d(20%, -100%, 0);
+    transform: translate3d(20%, -100%, 0);
+    opacity: 0;
+  }
+}
+@keyframes heart1 {
+  from {
+    -webkit-transform: translate3d(20%, 0, 0);
+    transform: translate3d(20%, 0, 0);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: translate3d(20%, -100%, 0);
+    transform: translate3d(20%, -100%, 0);
+    opacity: 0;
+  }
+}
+@-webkit-keyframes heart2 {
+  from {
+    -webkit-transform: translate3d(40%, 0, 0);
+    transform: translate3d(40%, 0, 0);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: translate3d(40%, -100%, 0);
+    transform: translate3d(40%, -100%, 0);
+    opacity: 0;
+  }
+}
+@keyframes heart2 {
+  from {
+    -webkit-transform: translate3d(40%, 0, 0);
+    transform: translate3d(40%, 0, 0);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: translate3d(40%, -100%, 0);
+    transform: translate3d(40%, -100%, 0);
+    opacity: 0;
+  }
+}
+@-webkit-keyframes heart3 {
+  from {
+    -webkit-transform: translate3d(60%, 0, 0);
+    transform: translate3d(60%, 0, 0);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: translate3d(60%, -100%, 0);
+    transform: translate3d(60%, -100%, 0);
+    opacity: 0;
+  }
+}
+@keyframes heart3 {
+  from {
+    -webkit-transform: translate3d(60%, 0, 0);
+    transform: translate3d(60%, 0, 0);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: translate3d(60%, -100%, 0);
+    transform: translate3d(60%, -100%, 0);
+    opacity: 0;
+  }
+}
+@-webkit-keyframes heart4 {
+  from {
+    -webkit-transform: translate3d(80%, 0, 0);
+    transform: translate3d(80%, 0, 0);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: translate3d(80%, -100%, 0);
+    transform: translate3d(80%, -100%, 0);
+    opacity: 0;
+  }
+}
+@keyframes heart4 {
+  from {
+    -webkit-transform: translate3d(80%, 0, 0);
+    transform: translate3d(80%, 0, 0);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: translate3d(80%, -100%, 0);
+    transform: translate3d(80%, -100%, 0);
+    opacity: 0;
+  }
+}
+@-webkit-keyframes heart5 {
+  from {
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: translate3d(100%, -100%, 0);
+    transform: translate3d(100%, -100%, 0);
+    opacity: 0;
+  }
+}
+@keyframes heart5 {
+  from {
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: translate3d(100%, -100%, 0);
+    transform: translate3d(100%, -100%, 0);
+    opacity: 0;
+  }
+}
+
 .main.section {
   position: static;
   display: -webkit-box;
@@ -187,28 +352,27 @@ p:last-child {
   width: 45px;
 }
 .main.section .hero.title {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  -webkit-box-flex: 3;
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
+  margin-top: 20px;
+  width: 85%;
   text-align: center;
   font-family: 'Vibur', cursive;
   font-size: 39px;
 }
 .main.section .hero.title .person {
-  width: 85%;
-  margin: auto 40px;
+  margin: 0 auto;
+  width: 45%;
 }
-.main.section .sub.title {
-  margin-top: 33px;
+@media (max-width: 890px) {
+  .main.section .hero.title .person {
+    width: 90%;
+  }
+}
+.main.section .hero.title .sub.title {
+  margin-top: 23px;
   font-family: 'Sniglet', sans-serif;
   font-size: 17px;
   letter-spacing: 0.69px;
@@ -300,14 +464,9 @@ footer.black.section .info .cru {
 }
 
 .yellow.section {
-  background-color: #fff;
-  background-image: url("images/bg.png");
+  background-color: #f3e9dc;
 }
 @media (max-width: 779px) {
-  .yellow.section {
-    background-image: none;
-    background-color: #fafafa;
-  }
   .yellow.section p {
     color: rgba(215,90,74,0.87) !important;
   }
